2008-04-11  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        http://bugs.webkit.org/show_bug.cgi?id=18340
        Elements with display="none" in a <clipPath> still contribute to clipping path

        Skip elements in clip-path container that have display=none specified.

        * svg/SVGClipPathElement.cpp:
        (WebCore::SVGClipPathElement::canvasResource):

2008-04-10  Antti Koivisto  <antti@apple.com>

        Reviewed by Eric.

        Redo the SVG animation support.
        
        It does
        - Full SMIL interval timing model including syncbase and event base timing (the hard part).
        - CSS and XML attribute animation.
        - Linear, discrete and spline calcModes.
        - Values animation with keyTimes and keySplines.
        - Link activated animations.
        - Pretty good support for <animate> and <set> animations
        - Basic support for <animateColor>, <animateMotion> and <animateTransform>.

        This passes some 35 of the 56 tests in W3C SVG animation test suite, a bunch more
        with some subtest failures.

        What is still missing
        - Additive animation with multiple animations operating on the same property. This is a
          major architectural feature in animation code. It shouldn't be too hard to add.
        - Only <animate> implements accumulate.
        - <animateMotion> does not do paths, keypoints, rotate.
        - <animateTransform> does not work correctly in all cases
        - calcMode paced is missing.
        - repeat, beginEvent, endEvent are missing.
        - accesskey() is missing.
        - JS does not see correct values for baseVal/animVal, changing values that are being
          animted for a script produces wrong results. This problem needs to be solved outside
          the animation code.
        - Some other stuff I forgot or do not know about.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj: